# OmniNFT

./: README.md  bash_train_omninft_ltx_fsdp.sh  requirements.txt
config/: base.py  nft.py
dataset/vggsound/: readme.md  test_metadata.jsonl  test_metadata_arena.jsonl
flow_grpo/: clip_scorer.py  fsdp_utils.py  hpsv3_scorer.py  pickscore_scorer.py  remote_client.py  reward_ckpt_path.py  rewards.py
flow_grpo/HPSv3/: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt  test_infer.py
flow_grpo/HPSv3/evaluate/: README.md  benchmark.py  evaluate.py
flow_grpo/HPSv3/generate/: README.md  gen_images_from_prompt.py  generator.py
flow_grpo/HPSv3/generate/utils/: pipelines.py  utils.py
flow_grpo/HPSv3/gradio_demo/: demo.py
flow_grpo/HPSv3/hpsv3/: __init__.py  inference.py  train.py
flow_grpo/HPSv3/hpsv3/cohp/: cohp_all.py  generator.py  run_cohp.py
flow_grpo/HPSv3/hpsv3/cohp/utils_cohp/: image2image_pipeline.py  pipelines.py  utils.py
flow_grpo/HPSv3/hpsv3/config/: HPSv3_7B.yaml
flow_grpo/HPSv3/hpsv3/dataset/: data_collator_qwen.py  pairwise_dataset.py  utils.py
flow_grpo/HPSv3/hpsv3/model/: differentiable_image_processor.py  qwen2vl_trainer.py  test_differentiable.py
flow_grpo/HPSv3/hpsv3/utils/: parser.py  training_utils.py
flow_grpo/audio_video_align/: av_align.py  av_desync.py  utils.py
flow_grpo/audio_video_align/synchformer/: ast.py  motionformer.py  (+3 more)
flow_grpo/server/: hpsv3_scorer_multi.py  run_remote_hpsv3.sh  run_remote_videoalign.sh  run_remote_videoscore2.sh  videoalign_scorer.py  videoalign_scorer_multi.py  videoscore2_scorer_multi.py
flow_grpo/videoalign/: .gitignore  LICENSE  README.md  calc_accuracy.py  environment.yaml  eval_videogen_rewardbench.py  inference.py  train.sh  train_reward.py
ltx_v2/ltx-core/: README.md  pyproject.toml
ltx_v2/ltx-pipelines/: CLAUDE.md  README.md  pyproject.toml
ltx_v2/ltx-pipelines/src/ltx_pipelines/: __init__.py  a2vid_two_stage.py  distilled.py  ic_lora.py  keyframe_interpolation.py  retake.py  ti2vid_one_stage.py  ti2vid_two_stages.py  ti2vid_two_stages_hq.py
ltx_v2/ltx-pipelines/src/ltx_pipelines/utils/: __init__.py  args.py  blocks.py  denoisers.py  helpers.py  media_io.py  samplers.py  types.py
ltx_v2/ltx-trainer/: pyproject.toml
scripts/: inference.py  merge_lora.py  train_omninft_ltx_fsdp.py
(+59 files in other folders)
